--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ background-color: #1e797d;
 border: 2px solid #1e797d;
 color: white;
 box-shadow: inset 0 0 0 2px #1e797d;
+font-size: 11px;
 }
 
 .container {
