--- a/index.html
+++ b/index.html
@@ -139,11 +139,11 @@ color: #1e797d;
 								<div class="container">
 								  <h1>Skills</h1>
 								</div>
-								  <p>HTML / HTML5</p>
+								  <p>HTML / HTML5 <span class="icon fa-html5"></span></p>
 								  <div class="container">
 								    <div class="skills html">Expert</div>
 								  </div>
-								  <p>CSS/ CSS3</p>
+								  <p>CSS/ CSS3 <span class="icon fa-css3"></span></p>
 								  <div class="container">
 								    <div class="skills css">Advanced</div>
 								  </div>
