--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							</div>
 							<p>I always enjoy learning new things. Especially the technologies that make the company where i am working on very special.</p>
 							<div class="content-Section">
-								<img src="file:///C:/Users/ceckardt/Desktop/Project/images/Foto.JPG"/>
+								<img src="images/Foto.JPG"/>
 							</div>
 							<div class="content-Section">
 								<a href="#portfolio" class="btn btn-info section3">FIND OUT MORE</a>
@@ -149,11 +149,11 @@
 								</div>
 								<p>At Visual Meta we have to synchronize millions of products from our partner-shops on a daily basis in order to provide users with the most recent product information (price changes, availability or even new products). Prior to allowing new product feeds to join the synchronization schedule, they have to undergo a detailed quality check. A manual validation of CSV & XML files with hundreds of thousands of lines is very time consuming and vague. To ease the burden of this huge effort, we planned, developed and released the “Feed Detective”, a web-based solution to automate & simplify this process.</p>
 								<div class="content-Section">
-									<a href="#" class="btn btn-outline-info">FULL STORY</a>
+									<a href="https://drive.google.com/open?id=1YRRUeMdbdxoKssb8YePv45Yu9bJbfvg_" class="btn btn-outline-info">FULL STORY</a>
 								</div>
 							</div>
 							<div class="content-Section">
-								<img src="file:///C:/Users/ceckardt/Desktop/Project/images/tool.jpg" alt="" class="responsive"/>
+								<img src="images/tool.jpg" alt="" class="responsive"/>
 								<div class="content-Section">
 									<i>Project built with:<br> Java, JavaFX, CSS, Selenium</i><br>
 								</div>
