added mobile view

--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
 						<div><a href="#resume">Resume <span class="fas fa-download"></span></a></div>
 					</div>
 		</section>
+		<section id="sidenavi">
+					<div id="mySidenav" class="sidenav">
+						<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+						<a href="#home" class="section1">Home <span class="fas fa-home"></span></a>
+						<a href="#about" class="section2">About Me <span class="fas fa-smile-wink"></span></a>
+						<a href="#portfolio" class="section3">Projects <span class="fas fa-project-diagram"></span></a>
+						<a href="#connect" class="section4">Connect With Me <span class="fab fa-connectdevelop"></span></a>
+						<a href="#contact" class="section5">Contact <span class="fas fa-envelope"></span></a>
+						<a href="#resume">Resume <span class="fas fa-download"></span></a>
+					</div>
+					<span id="sideNaviButton" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+		</section>
 		<!-- ABOUT -->
 		<section id="about">
 			<div class="container">
