adding all animations and fixed width on small view

--- a/index.html
+++ b/index.html
@@ -196,52 +196,58 @@
 					<h1>Social</h1>
 					<hr>
 				</div>
-				<div class="content-Section">
+				<div class="connect-social-text1">
+					<div class="content-Section">
 					<i>Want to get in touch? I share my passion for development anywhere I can.</i>
 				</div>
-				<div class="content-Split">
-						<div class="content-Section">
-							<a href="#" class="btn btn-outline-info"><h1 class="fas fa-envelope"></h1></a>
-						</div>
-						<div class="content-Section">
-							<a href="#" class="btn btn-outline-info"><h1 class="fab fa-linkedin"></h1></a>
-						</div>
-						<div class="content-Section">
-							<a href="#" class="btn btn-outline-info"><h1 class="fab fa-xing-square"></h1></a>
-						</div>
-						<div class="content-Section">
-							<a href="#" class="btn btn-outline-info"><h1 class="fab fa-github-square"></h1></a>
-						</div>
-						<div class="content-Section">
-							<a href="#" class="btn btn-outline-info"><h1 class="fab fa-stack-overflow"></h1></a>
-						</div>
+				</div>
+				<div class="connect-social-buttons">
+					<div class="content-Split">
+							<div class="content-Section">
+								<a href="#" class="btn btn-outline-info"><h1 class="fas fa-envelope"></h1></a>
+							</div>
+							<div class="content-Section">
+								<a href="#" class="btn btn-outline-info"><h1 class="fab fa-linkedin"></h1></a>
+							</div>
+							<div class="content-Section">
+								<a href="#" class="btn btn-outline-info"><h1 class="fab fa-xing-square"></h1></a>
+							</div>
+							<div class="content-Section">
+								<a href="#" class="btn btn-outline-info"><h1 class="fab fa-github-square"></h1></a>
+							</div>
+							<div class="content-Section">
+								<a href="#" class="btn btn-outline-info"><h1 class="fab fa-stack-overflow"></h1></a>
+							</div>
+					</div>
 				</div>
 				<div class="content-Split">
 					<br/>
-					
-					
 				</div>
 				<div class="header-Sub-Section">
 					<h3>Interests</h3>
 				</div>
 				<div class="content-Split">
-					<div class="content-Section">
+					<div class="connect-social-text2">
+						<div class="content-Section">
 						<p>Here is a <strong>short list</strong> of technologies iam interested in or have recently worked on:</p>
 					</div>
-						<div class="content-Section">
-							<img src="https://spring.io/img/spring-by-pivotal-9066b55828deb3c10e27e609af322c40.png" class="responsive">
-						</div>
-						<div class="content-Section">
-							<img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg" class="responsive">
-						</div>
-						<div class="content-Section">
-							<img src="https://www.thymeleaf.org/images/thymeleaf.png" class="responsive">
-						</div>
+					</div>
+					<div class="content-Section">
+						<img src="https://spring.io/img/spring-by-pivotal-9066b55828deb3c10e27e609af322c40.png" class="responsive">
+					</div>
+					<div class="content-Section">
+						<img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg" class="responsive">
+					</div>
+					<div class="content-Section">
+						<img src="https://www.thymeleaf.org/images/thymeleaf.png" class="responsive">
+					</div>
 				</div>
-				<div class="content-Section">
+				<div class="connect-social-text3">
+					<div class="content-Section">
 						<i>I am interested in a much variety if technologies! <br> 
 						I feel very interested in building tools and working with frameworks.</i>
 						<br>
+				</div>
 				</div>
 				<div class="content-Split">
 						<div class="content-Section">
@@ -260,7 +266,7 @@
 			</div>
 		</section>
 		<!-- CONTACT -->
-		<section id="contact" class="connect hidden">
+		<section id="contact" class="contact hidden">
 			<div class="container">
 				<div class="header-Section">
 					<h1>About CCC</h1>
@@ -268,39 +274,44 @@
 				</div>
 				<div class="content-Split">
 							<div class="content-Section">
-								<p>Hello there! My name is Chris and I'm a self taught Developer.</p><br>
-								<p>I started my journey as a self-taught web developer right out of High School. Ever since I have fallen in love with web development and spend most of my days taking my craft to the next level.</p>
-								<p>Nowadays I tend to code all of my projects from scratch in order to deliver a unique experience to every company.</p>
-								<p>Like many other people, I enjoy spending my free time increasing my knowledge of Web Development and building new and challenging projects.</p>
-								<p>Some of my favorite things to do include:</p>
-								<ul>
-									<li>1 on 1 tutoring on development</li>
-									<li>Contributing to open source projects</li>
-									<li>Learning modern standards and best practices of the industry</li>
-								</ul>
+								<div class="wrapper-left-container">
+									<p>Hello there! My name is Chris and I'm a self taught Developer.</p><br>
+									<p>I started my journey as a self-taught web developer right out of High School. Ever since I have fallen in love with web development and spend most of my days taking my craft to the next level.</p>
+									<p>Nowadays I tend to code all of my projects from scratch in order to deliver a unique experience to every company.</p>
+									<p>Like many other people, I enjoy spending my free time increasing my knowledge of Web Development and building new and challenging projects.</p>
+									<p>Some of my favorite things to do include:</p>
+									<ul>
+										<li>1 on 1 tutoring on development</li>
+										<li>Contributing to open source projects</li>
+										<li>Learning modern standards and best practices of the industry</li>
+									</ul>
+								</div>
 							</div>
 							<div class="content-Section">
-								<h1>Say hello:</h1>
-								<p>Address: Berlin - Germany</p>
-								<p>Email: c.eckardt@sags-per-mail.de</p>
-								<div class="content-Split">
-									<div class="content-Section">
-										<a href="#" class="btn btn-outline-info"><h6 class="fas fa-envelope"></h6></a>
-									</div>
-									<div class="content-Section">
-										<a href="#" class="btn btn-outline-info"><h6 class="fab fa-linkedin"></h6></a>
-									</div>
-									<div class="content-Section">
-										<a href="#" class="btn btn-outline-info"><h6 class="fab fa-xing-square"></h6></a>
-									</div>
-									<div class="content-Section">
-										<a href="#" class="btn btn-outline-info"><h6 class="fab fa-github-square"></h6></a>
-									</div>
-									<div class="content-Section">
-										<a href="#" class="btn btn-outline-info"><h6 class="fab fa-stack-overflow"></h6></a>
+								<div class="wrapper-right-container">
+									<h1>Say hello:</h1>
+									<p>Address: Berlin - Germany</p>
+									<p>Email: c.eckardt@sags-per-mail.de</p>
+									<div class="content-Split">
+										<div class="content-Section">
+											<a href="#" class="btn btn-outline-info"><h6 class="fas fa-envelope"></h6></a>
+										</div>
+										<div class="content-Section">
+											<a href="#" class="btn btn-outline-info"><h6 class="fab fa-linkedin"></h6></a>
+										</div>
+										<div class="content-Section">
+											<a href="#" class="btn btn-outline-info"><h6 class="fab fa-xing-square"></h6></a>
+										</div>
+										<div class="content-Section">
+											<a href="#" class="btn btn-outline-info"><h6 class="fab fa-github-square"></h6></a>
+										</div>
+										<div class="content-Section">
+											<a href="#" class="btn btn-outline-info"><h6 class="fab fa-stack-overflow"></h6></a>
+										</div>
 									</div>
 								</div>
 							</div>
+					</div>
 				</div>
 			</div>
 		</section>
