some color exchange

--- a/index.html
+++ b/index.html
@@ -71,13 +71,16 @@
 				</div>
 				<div class="content-Split">
 					<div class="content-Section">
-						<h2><span class="fas fa-laptop"></span> <br>Passionate about development</h2>
+						<h2><span class="fas fa-laptop"></span></h2>
+						<h2>Passionate about development</h2>
 					</div>
 					<div class="content-Section">
-						<h2><span class="fas fa-book-open"></span> <br>Quick learner</h2>
+						<h2><span class="fas fa-book-open"></span></h2>
+						<h2>Quick learner</h2>
 					</div>
 					<div class="content-Section">
-						<h2><span class="fas fa-users"></span> <br>Adaptable</h2>
+						<h2><span class="fas fa-users"></span></h2>
+						<h2>Adaptable</h2>
 					</div>
 				</div>	
 				<div class="content-Split">
@@ -108,7 +111,7 @@
 						</div>
 						<div class="content-Section">
 								<div class="wrapper-container">
-										<div class="header container"><h1>Skills</h1></div>
+										<div class="header container"><h1 class="skills-Header">Skills</h1></div>
 										<p>HTML / HTML5 <span class="fab fa-html5"></span></p>
 										<div class="container"><div class="skills html">Expert</div></div>
 										<p>CSS/ CSS3 <span class="fab fa-css3"></span></p>
