adding all links

--- a/index.html
+++ b/index.html
@@ -97,17 +97,21 @@
 				<div class="content-Split">
 						<div class="content-Section">
 							<div class="wrapper-left-container">
-								<div class="header-content">
-									<h1>Technological</h1>
-								</div>
-								<p>I always enjoy learning new things. Especially the technologies that make the company where i am working on very special.</p>
 								<div class="content-Section">
 									<img src="images/Foto.JPG"/>
 								</div>
 								<div class="content-Section">
 									<a href="#portfolio" class="btn btn-outline-info section3">FIND OUT MORE</a>
 								</div>
+								<div class="content-Section">
+									<div class="header-content">
+										<h1>Technological</h1>
+									</div>
+									<div class="content-Section">
+										<p>I always enjoy learning new things. Especially the technologies that make the company where i am working on very special.</p>
+									</div>
 							</div>
+								</div>
 						</div>
 						<div class="content-Section">
 								<div class="wrapper-container">
@@ -171,7 +175,7 @@
 								</div>
 								<p>At Visual Meta we have to synchronize millions of products from our partner-shops on a daily basis in order to provide users with the most recent product information (price changes, availability or even new products). Prior to allowing new product feeds to join the synchronization schedule, they have to undergo a detailed quality check. A manual validation of CSV & XML files with hundreds of thousands of lines is very time consuming and vague. To ease the burden of this huge effort, we planned, developed and released the “Feed Detective”, a web-based solution to automate & simplify this process.</p>
 								<div class="content-Section">
-									<a href="https://drive.google.com/open?id=1YRRUeMdbdxoKssb8YePv45Yu9bJbfvg_" class="btn btn-outline-info">FULL STORY</a>
+									<a href="https://drive.google.com/open?id=1YRRUeMdbdxoKssb8YePv45Yu9bJbfvg_" class="btn btn-outline-info" target="_blank">FULL STORY</a>
 								</div>
 							</div>
 							<div class="content-Section">
@@ -183,7 +187,7 @@
 								</div>
 								<p>At Visual Meta we have to sanity check thousand of webpages on a daily basis in order to provide users with the best recent and newest product information on our landing pages. To ease the burden of this huge effort, we planned, developed and released the “QM Frontend Checker tool”, a JavaFX and Selenium based solution to automate & simplify this process.</p>
 								<div class="content-Section">
-									<a href="#" class="btn btn-outline-info">FULL STORY</a>
+									<a href="https://github.com/crisscrosscrass/frontendcheckerqm" class="btn btn-outline-info" target="_blank">FULL STORY</a>
 								</div>
 							</div>
 					</div>
@@ -203,19 +207,19 @@
 				<div class="connect-social-buttons">
 					<div class="content-Split">
 							<div class="content-Section">
-								<a href="#" class=""><h1 class="fas fa-envelope"></h1></a>
+								<a href="https://www.linkedin.com/in/christopher-eckardt/" class="btn btn-outline-info" target="_blank"><h1 class="fab fa-linkedin"></h1></a>
 							</div>
 							<div class="content-Section">
-								<a href="#" class="btn btn-outline-info"><h1 class="fab fa-linkedin"></h1></a>
+								<a href="http://xing.com/profile/Christopher_Eckardt" class="btn btn-outline-info" target="_blank"><h1 class="fab fa-xing-square"></h1></a>
 							</div>
 							<div class="content-Section">
-								<a href="#" class="btn btn-outline-info"><h1 class="fab fa-xing-square"></h1></a>
+								<a href="https://github.com/crisscrosscrass" class="btn btn-outline-info" target="_blank"><h1 class="fab fa-github-square" ></h1></a>
 							</div>
 							<div class="content-Section">
-								<a href="#" class="btn btn-outline-info"><h1 class="fab fa-github-square"></h1></a>
+								<a href="https://stackoverflow.com/users/8268744/crisscrosscrass" class="btn btn-outline-info" target="_blank"><h1 class="fab fa-stack-overflow"></h1></a>
 							</div>
 							<div class="content-Section">
-								<a href="#" class="btn btn-outline-info"><h1 class="fab fa-stack-overflow"></h1></a>
+								<a href="mailto:c.eckardt@sags-per-mail.de" class=""><h1 class="fas fa-envelope"></h1></a>
 							</div>
 					</div>
 				</div>
@@ -292,19 +296,19 @@
 									<p>Email: c.eckardt@sags-per-mail.de</p>
 									<div class="content-Split">
 										<div class="content-Section">
-											<a href="#" class="btn btn-outline-info"><h6 class="fas fa-envelope"></h6></a>
+											<a href="https://www.linkedin.com/in/christopher-eckardt/" class="btn btn-outline-info" target="_blank"><h6 class="fab fa-linkedin"></h6></a>
 										</div>
 										<div class="content-Section">
-											<a href="#" class="btn btn-outline-info"><h6 class="fab fa-linkedin"></h6></a>
+											<a href="http://xing.com/profile/Christopher_Eckardt" class="btn btn-outline-info" target="_blank"><h6 class="fab fa-xing-square"></h6></a>
 										</div>
 										<div class="content-Section">
-											<a href="#" class="btn btn-outline-info"><h6 class="fab fa-xing-square"></h6></a>
+											<a href="https://github.com/crisscrosscrass" class="btn btn-outline-info" target="_blank"><h6 class="fab fa-github-square"></h6></a>
 										</div>
 										<div class="content-Section">
-											<a href="#" class="btn btn-outline-info"><h6 class="fab fa-github-square"></h6></a>
+											<a href="https://stackoverflow.com/users/8268744/crisscrosscrass" class="btn btn-outline-info" target="_blank"><h6 class="fab fa-stack-overflow"></h6></a>
 										</div>
 										<div class="content-Section">
-											<a href="#" class="btn btn-outline-info"><h6 class="fab fa-stack-overflow"></h6></a>
+											<a href="mailto:c.eckardt@sags-per-mail.de" class="btn btn-outline-info"><h6 class="fas fa-envelope"></h6></a>
 										</div>
 									</div>
 								</div>
