--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<div><a href="#portfolio" class="section3">Projects <span class="fas fa-project-diagram"></span></a></div>
 						<div><a href="#connect" class="section4">Connect With Me <span class="fab fa-connectdevelop"></span></a></div>
 						<div><a href="#contact" class="section5">Contact <span class="fas fa-envelope"></span></a></div>
-						<div><a href="#resume">Resume <span class="fas fa-download"></span></a></div>
+						<div><a href="images/CVChristopherEckardt.pdf">Resume <span class="fas fa-download"></span></a></div>
 					</div>
 		</section>
 		<section id="sidenavi">
@@ -56,7 +56,7 @@
 						<a href="#portfolio" class="section3">Projects <span class="fas fa-project-diagram"></span></a>
 						<a href="#connect" class="section4">Connect With Me <span class="fab fa-connectdevelop"></span></a>
 						<a href="#contact" class="section5">Contact <span class="fas fa-envelope"></span></a>
-						<a href="#resume">Resume <span class="fas fa-download"></span></a>
+						<a href="images/CVChristopherEckardt.pdf">Resume <span class="fas fa-download"></span></a>
 					</div>
 					<span id="sideNaviButton" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
 		</section>
@@ -128,6 +128,8 @@
 										<div class="container"><div class="skills bootstrap">Basic</div></div>
 										<p>JSON &amp; AJAX <span class="fas fa-barcode"></span></p>
 										<div class="container"><div class="skills json">Basic</div></div>
+										<p>Regular Expression <span class="fas fa-search-plus"></span></p>
+										<div class="container"><div class="skills regex">Basic</div></div>
 										<p>PHP <span class="fab fa-php"></span></p>
 										<div class="container"><div class="skills php">Advanced</div></div>
 										<p>SQL <span class="fas fa-database"></span></p>
