--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@
 										<div class="container"><div class="skills javascript">Advanced</div></div>
 										<p>JQuery <span class="fas fa-code-branch"></span></p>
 										<div class="container"><div class="skills jquery">Advanced</div></div>
+										<p>React <span class="fab fa-react"></span></p>
+										<div class="container"><div class="skills react">Basic</div></div>
 										<p>Bootsrap <span class="fab fa-blogger"></span></p>
 										<div class="container"><div class="skills bootstrap">Basic</div></div>
 										<p>JSON &amp; AJAX <span class="fas fa-barcode"></span></p>
