--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 								<div class="wrapper-left-container">
 									<img src="images/Project1.jpg" alt="" class="responsive"/>
 									<div class="content-Section">
+										<a href="http://crisscrosscrass.epizy.com" class="btn btn-outline-primary" target="_blank">DEMO</a>
 										<i>Project built with:<br> HTML, CSS, Java-Script, PHP, Ajax</i><br>
 									</div>
 								</div>
