color for navi and size adjustments

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<a href="#contact" class="section5">Contact <span class="fas fa-envelope"></span></a>
 						<a href="images/CVChristopherEckardt.pdf">Resume <span class="fas fa-download"></span></a>
 					</div>
-					<span id="sideNaviButton" style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
+					<span id="sideNaviButton" style="font-size:30px;cursor:pointer;color:#A239CA;" onclick="openNav()">&#9776;</span>
 		</section>
 		<!-- ABOUT -->
 		<section id="about" class="about hidden">
@@ -175,7 +175,7 @@
 								<div class="wrapper-left-container">
 									<img src="images/Project1.jpg" alt="" class="responsive"/>
 									<div class="content-Section">
-										<a href="http://crisscrosscrass.epizy.com" class="btn btn-outline-primary" target="_blank">DEMO (max. 2mb)</a>
+										<a href="http://crisscrosscrass.epizy.com" class="btn btn-outline-primary" target="_blank">DEMO</a>(filzesize max. 2mb)
 										<i>Project built with:<br> HTML, CSS, Java-Script, PHP, Ajax</i><br>
 									</div>
 								</div>
