--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- HOSTED -->
+		<!-- BOOTSTRAP CSS -->
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+		<!-- FONT AWESOME -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-<script src="https://smtpjs.com/v3/smtp.js"></script>
+		<!-- BOOTSTRAP JS-->
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+		<!-- SMTP JS -->
+	<script src="https://smtpjs.com/v3/smtp.js"></script>
 	<!-- LOCAL -->
 	<link rel="stylesheet" href="./assets/css/ccc.css">
 	<script src="assets/js/jquery.min.js"></script>
@@ -276,7 +280,7 @@
 		</section>
 		<!-- CONTACT -->
 		<section id="contact" class="contact hidden">
-			<svg preserveAspectRatio="none" viewBox="0 0 100 102" height="150" width="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" class="svgcolor-light" style="margin-top: -150px;margin-bottom: 65px;">
+			<svg preserveAspectRatio="none" viewBox="0 0 100 102" height="75" width="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" class="svgcolor-light" style="margin-top: -150px;margin-bottom: 65px;">
       <path d="M0 0 L50 100 L100 0 Z" fill="white" stroke="white"></path>
       </svg>
       <p id="aboutcontact" style="margin-bottom: 65px;"></p>
