--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
 		<section id="navi">
 					<div class="link-wrap">
 						<div><a href="#home" class="section1">Home <span class="fas fa-home"></span></a></div>
-						<div><a href="#about" class="section2">About Me <span class="fas fa-smile-wink"></span></a></div>
-						<div><a href="#portfolio" class="section3">Projects <span class="fas fa-project-diagram"></span></a></div>
-						<div><a href="#connect" class="section4">Connect With Me <span class="fab fa-connectdevelop"></span></a></div>
-						<div><a href="#contact" class="section5">Contact <span class="fas fa-envelope"></span></a></div>
+						<div><a href="#about" class="section2" id="naviAboutMeLink">About Me <span class="fas fa-smile-wink"></span></a></div>
+						<div><a href="#portfolio" class="section3" id="naviProjectsLink">Projects <span class="fas fa-project-diagram"></span></a></div>
+						<div><a href="#connect" class="section4" id="naviConnectLink">Connect With Me <span class="fab fa-connectdevelop"></span></a></div>
+						<div><a href="#contact" class="section5" id="naviContactLink">Contact <span class="fas fa-envelope"></span></a></div>
 						<div><a href="images/CVChristopherEckardt.pdf">Resume <span class="fas fa-download"></span></a></div>
 					</div>
 		</section>
