added home active

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<!-- Navi -->
 		<section id="navi">
 					<div class="link-wrap">
-						<div><a href="#home" class="section1">Home <span class="fas fa-home"></span></a></div>
+						<div><a href="#home" class="section1" id="naviHomeLink">Home <span class="fas fa-home"></span></a></div>
 						<div><a href="#about" class="section2" id="naviAboutMeLink">About Me <span class="fas fa-smile-wink"></span></a></div>
 						<div><a href="#portfolio" class="section3" id="naviProjectsLink">Projects <span class="fas fa-project-diagram"></span></a></div>
 						<div><a href="#connect" class="section4" id="naviConnectLink">Connect With Me <span class="fab fa-connectdevelop"></span></a></div>
