--- a/assets/QM/ShoesAuxData.htm
+++ b/assets/QM/ShoesAuxData.htm
@@ -87,6 +87,7 @@
                     <p>girls <input id="prefilled-girls" value=""></p>
                     <p>boys <input id="prefilled-boys" value=""></p>
                     <p style="text-align:center;">Brand</p>
+                    <p><i style="font-size:1ch">(remember: insert <strong>tag-IDs</strong> NOT brand-IDs !)</i></p>
                     <p>nike <input id="prefilled-nike" value=""></p>
                     <p>puma <input id="prefilled-puma" value=""></p>
                     <p>adidas <input id="prefilled-adidas" value=""></p>
